--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <h1>Đang Nâng Cấp</h1>
         <p>
             Hệ thống đang được bảo trì để mang lại trải nghiệm tốt hơn cho bạn.<br>
-            Chúng tôi sẽ quay trở lại ngay thôi!
+            Loy đang cố gắng và sẽ quay trở lại ngay thôi!
         </p>
 
         <!-- Fake Progress Bar -->
