--- a/index.html
+++ b/index.html
@@ -1,166 +1,179 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="vi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Ultimate Maintenance Page</title>
-<style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Poppins', sans-serif; }
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Web Maintenance — Enhanced Animation</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <style>
     body {
-        height:100vh;
-        background: radial-gradient(circle at 30% 30%, #3d1c81, #120029);
-        overflow:hidden;
-        position:relative;
-        color:white;
+      margin: 0;
+      background: radial-gradient(circle at 20% 20%, #1e1e3f, #0a0a16 70%);
+      color: #e0e0ff;
+      font-family: 'Inter', sans-serif;
+      overflow-x: hidden;
     }
 
-    /* --- PARALLAX LAYERS --- */
-    .layer { position:absolute; inset:0; pointer-events:none; }
-
-    .stars { background:url('https://i.imgur.com/kQ9H0bR.png') repeat; animation: drift 60s linear infinite; opacity:.35; }
-    @keyframes drift { from{background-position:0 0;} to{background-position:3000px 3000px;} }
-
-    .nebula { background:url('https://i.imgur.com/8bU7fG2.png') center/cover no-repeat; mix-blend-mode:screen; opacity:.15; animation: floatSlow 18s ease-in-out infinite alternate; }
-    @keyframes floatSlow { 0%{transform:translateY(-20px);} 100%{transform:translateY(20px);} }
-
-    /* --- FLOATING ORBS --- */
-    .orb {
-        position:absolute;
-        width:180px; height:180px;
-        border-radius:50%;
-        filter:blur(40px);
-        animation: orbMove 14s infinite ease-in-out;
-        opacity:.45;
-    }
-    .orb:nth-child(1){ background:#ff00ff; top:20%; left:10%; animation-delay:-2s; }
-    .orb:nth-child(2){ background:#00eaff; top:60%; left:70%; animation-delay:-4s; }
-    .orb:nth-child(3){ background:#ffae00; top:75%; left:20%; animation-delay:-6s; }
-    @keyframes orbMove {
-        0% { transform:translate(0,0) scale(1); }
-        50% { transform:translate(40px,-60px) scale(1.2); }
-        100% { transform:translate(-20px,20px) scale(1); }
+    /* Floating geometric shapes */
+    .geo {
+      position: absolute;
+      width: 80px;
+      height: 80px;
+      background: linear-gradient(45deg, #7c3aed, #6ee7b7);
+      opacity: 0.18;
+      filter: blur(2px);
+      border-radius: 20%;
+      animation: geoFloat 12s infinite ease-in-out;
     }
 
-    /* --- FLOATING ROBOT --- */
-    .robot-container{
-        position:absolute;
-        top:50%; left:50%; transform:translate(-50%,-50%);
-        width:260px; height:260px;
-        animation: floatRobot 6s ease-in-out infinite;
-    }
-    @keyframes floatRobot{
-        0%{ transform:translate(-50%,-52%) rotate(-2deg); }
-        50%{ transform:translate(-50%,-48%) rotate(2deg); }
-        100%{ transform:translate(-50%,-52%) rotate(-2deg); }
-    }
-    .robot{
-        width:100%; height:100%;
-        background:url('https://i.imgur.com/8Y9gTps.png') center/contain no-repeat;
-        filter:drop-shadow(0 0 10px #00eaff);
+    .geo:nth-child(2) { width: 120px; height: 120px; top: 60%; left: 70%; animation-duration: 14s; }
+    .geo:nth-child(3) { width: 60px; height: 60px; top: 30%; left: 80%; animation-duration: 10s; }
+    .geo:nth-child(4) { width: 140px; height: 140px; top: 10%; left: 5%; animation-duration: 18s; }
+
+    @keyframes geoFloat {
+      0% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-40px) rotate(180deg); }
+      100% { transform: translateY(0) rotate(360deg); }
     }
 
-    /* --- TEXT BLOCK --- */
-    .content{
-        position:absolute;
-        width:100%; text-align:center;
-        top:68%; left:50%; transform:translateX(-50%);
-        animation: fadeUp 2s ease;
-    }
-    @keyframes fadeUp {
-        0%{ opacity:0; transform:translate(-50%,30px); }
-        100%{ opacity:1; transform:translate(-50%,0); }
-    }
-
-    h1{ font-size:3rem; letter-spacing:2px; margin-bottom:10px; text-shadow:0 0 20px #00eaff; }
-    p{ opacity:.85; font-size:1.2rem; }
-
-    /* --- SCANLINES EFFECT --- */
-    .scanlines{
-        position:absolute;
-        inset:0;
-        background: repeating-linear-gradient(
-            to bottom,
-            rgba(255,255,255,0.05) 0px,
-            rgba(255,255,255,0.05) 2px,
-            transparent 2px,
-            transparent 4px
-        );
-        animation: scan 5s linear infinite;
-        opacity:.08;
-        pointer-events:none;
-    }
-    @keyframes scan {
-        from{ background-position:0 -1000px; }
-        to{ background-position:0 1000px; }
+    /* Main wrapper */
+    .center {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      gap: 20px;
+      text-align: center;
+      padding: 20px;
+      position: relative;
+      z-index: 5;
     }
 
-    /* --- GLITCH TEXT --- */
-    h1.glitch{
-        position:relative;
-    }
-    h1.glitch::before,
-    h1.glitch::after{
-        content:attr(data-text);
-        position:absolute;
-        top:0; left:0;
-        width:100%; height:100%;
-    }
-    h1.glitch::before{ left:2px; text-shadow:-2px 0 magenta; animation: glitch1 1.5s infinite; }
-    h1.glitch::after{ left:-2px; text-shadow:-2px 0 cyan; animation: glitch2 2s infinite; }
-
-    @keyframes glitch1{
-        0%{clip-path:inset(0 0 80% 0);} 20%{clip-path:inset(40% 0 40% 0);} 40%{clip-path:inset(20% 0 60% 0);} 100%{clip-path:inset(0 0 80% 0);}
-    }
-    @keyframes glitch2{
-        0%{clip-path:inset(80% 0 0 0);} 20%{clip-path:inset(60% 0 20% 0);} 40%{clip-path:inset(30% 0 40% 0);} 100%{clip-path:inset(80% 0 0 0);}
+    h1 {
+      font-size: 3rem;
+      font-weight: 800;
+      animation: fadeInDown 1.2s;
+      text-shadow: 0 0 18px rgba(110, 231, 183, 0.5);
     }
 
-    /* --- FLOATING PARTICLES --- */
-    .particle{
-        position:absolute;
-        width:6px; height:6px;
-        background:white;
-        border-radius:50%;
-        opacity:.8;
-        animation: particleFloat linear infinite;
+    p {
+      max-width: 520px;
+      line-height: 1.6;
+      color: #b7b7d9;
+      animation: fadeIn 1.6s;
     }
-    @keyframes particleFloat{
-        from{ transform:translateY(120vh) translateX(-40px); }
-        to{ transform:translateY(-10vh) translateX(40px); }
+
+    /* Neon server animation */
+    .server-box {
+      width: 240px;
+      height: 300px;
+      background: linear-gradient(180deg, #13132b, #0d0d1b);
+      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,0.06);
+      box-shadow: 0 0 40px rgba(124, 58, 237, 0.4);
+      position: relative;
+      animation: hoverUp 5s infinite ease-in-out;
     }
-</style>
+
+    @keyframes hoverUp {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-18px); }
+      100% { transform: translateY(0); }
+    }
+
+    .glow-line {
+      position: absolute;
+      left: 12px;
+      right: 12px;
+      height: 6px;
+      border-radius: 6px;
+      background: linear-gradient(90deg, #6ee7b7, #7c3aed);
+      filter: drop-shadow(0 0 10px #6ee7b7);
+      animation: pulse 2.6s infinite ease-in-out;
+    }
+
+    .glow-line:nth-child(1) { top: 40px; animation-delay: 0s; }
+    .glow-line:nth-child(2) { top: 90px; animation-delay: 0.6s; }
+    .glow-line:nth-child(3) { top: 140px; animation-delay: 1.2s; }
+    .glow-line:nth-child(4) { top: 190px; animation-delay: 1.8s; }
+
+    @keyframes pulse {
+      0% { opacity: 0.4; transform: scale(1); }
+      50% { opacity: 1; transform: scale(1.05); }
+      100% { opacity: 0.4; transform: scale(1); }
+    }
+
+    /* Rotating 3D ring */
+    .ring {
+      margin-top: 40px;
+      width: 260px;
+      height: 260px;
+      border-radius: 50%;
+      border: 6px solid rgba(255,255,255,0.06);
+      position: relative;
+      animation: spin 14s linear infinite;
+      box-shadow: 0 0 30px rgba(255,255,255,0.12) inset;
+    }
+
+    .ring::before {
+      content: "";
+      position: absolute;
+      inset: -4px;
+      border-radius: 50%;
+      border: 6px solid;
+      border-image: linear-gradient(90deg, #6ee7b7, #7c3aed) 1;
+      filter: drop-shadow(0 0 16px #7c3aed);
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    /* CTA */
+    button {
+      margin-top: 30px;
+      padding: 14px 24px;
+      border-radius: 10px;
+      border: none;
+      background: linear-gradient(90deg, #6ee7b7, #7c3aed);
+      font-size: 1rem;
+      font-weight: 700;
+      color: #0a0a16;
+      cursor: pointer;
+      animation: fadeInUp 1s;
+      transition: 0.25s;
+      box-shadow: 0 0 20px rgba(110, 231, 183, 0.4);
+    }
+
+    button:hover {
+      transform: scale(1.08);
+      box-shadow: 0 0 28px rgba(124, 58, 237, 0.7);
+    }
+  </style>
 </head>
 <body>
+  <!-- Floating shapes -->
+  <div class="geo"></div>
+  <div class="geo"></div>
+  <div class="geo"></div>
+  <div class="geo"></div>
 
-<div class="layer stars"></div>
-<div class="layer nebula"></div>
-<div class="orb"></div>
-<div class="orb"></div>
-<div class="orb"></div>
+  <div class="center">
+    <h1>Đang bảo trì — Hệ thống siêu nâng cấp</h1>
+    <p>Chúng tôi đang triển khai các mô-đun mới, tối ưu hiệu năng, và nâng cấp bảo mật. Mọi thứ sẽ ổn định trở lại trong thời gian ngắn.</p>
 
-<div class="robot-container">
-    <div class="robot"></div>
-</div>
+    <div class="server-box animate__animated animate__fadeInUp">
+      <div class="glow-line"></div>
+      <div class="glow-line"></div>
+      <div class="glow-line"></div>
+      <div class="glow-line"></div>
+    </div>
 
-<div class="content">
-    <h1 class="glitch" data-text="MAINTENANCE MODE">MAINTENANCE MODE</h1>
-    <p>The system is upgrading with extreme animations. Stay tuned!</p>
-</div>
+    <div class="ring"></div>
 
-<div class="scanlines"></div>
-
-<script>
-// create floating particles
-for(let i=0;i<70;i++){
-    const p=document.createElement('div');
-    p.className='particle';
-    p.style.left=Math.random()*100+'vw';
-    p.style.animationDuration=(8+Math.random()*10)+'s';
-    p.style.opacity=Math.random()*0.8+0.2;
-    document.body.appendChild(p);
-}
-</script>
-
+    <button>Thông báo khi hoàn tất</button>
+  </div>
 </body>
 </html>
