--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
   <div class="geo"></div>
 
   <div class="center">
-    <h1>Đang bảo trì — Hệ thống siêu nâng cấp</h1>
-    <p>Chúng tôi đang triển khai các mô-đun mới, tối ưu hiệu năng, và nâng cấp bảo mật. Mọi thứ sẽ ổn định trở lại trong thời gian ngắn.</p>
+    <h1>Đang bảo trì — Hệ thống đang nâng cấp</h1>
+    <p>Mọi thứ dự kiến sẽ ổn định trở lại trong 0:00 am 5/12/2025.</p>
 
     <div class="server-box animate__animated animate__fadeInUp">
       <div class="glow-line"></div>
