--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
             const contextData = reviews.map(r => `${r.name}: ${r.descLong} (Tại: ${r.address})`).join("\n");
             
             const finalPrompt = `
-Bạn là Loy, một học sinh cấp 3 am hiểu sâu sắc về văn hóa và ẩm thực An Giang.
+Bạn là Loy của một thế giới song song, và là một học sinh cấp 3 am hiểu sâu sắc về văn hóa và ẩm thực An Giang.
 Nhiệm vụ: Tư vấn, trò chuyện với người dùng về du lịch và ăn uống tại An Giang dựa trên danh sách sau:
 ${contextData}
 
