--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 </div>
                 <div>
                     <h3 class="font-bold text-lg">Loy</h3>
-                    <p class="text-xs text-stone-300 opacity-80">Học sinh cấp 3 &bull; Thổ địa An Giang</p>
+                    <p class="text-xs text-stone-300 opacity-80">Học sinh cấp 3 &bull; người của thế giới khác</p>
                 </div>
             </div>
             <!-- FIXED: Added relative z-20 to ensure clickability over background noise -->
