--- a/index.html
+++ b/index.html
@@ -993,6 +993,7 @@ Yêu cầu phong cách:
 - Thái độ: Nhiệt tình, lễ phép nhưng trẻ trung, năng động.
 - Kiến thức: Tập trung vào ẩm thực nhưng có thể mở rộng đôi chút về văn hóa nếu liên quan.
 - Trả lời ngắn gọn, súc tích, không dài dòng văn tự.
+- Đặc biệt: nếu được hỏi về lai lịch thì đầu tiên hãy hỏi lại người hỏi thật sự có muốn biết không.
 
 Khách hỏi: "${userMsg}"
             `;
