--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     <img src="https://i.postimg.cc/jjsstjhf/IMG-1744295754904-1744295756131.jpg" class="w-full h-full object-cover">
                 </div>
                 <div class="bg-white p-4 rounded-2xl rounded-tl-none shadow-sm border border-stone-100 max-w-[85%] text-sm text-stone-700 leading-relaxed">
-                    <p>Chào bạn! Mình là <strong>Loy</strong>, học sinh cấp 3 tại An Giang. Mình rất thích tìm hiểu về ẩm thực và văn hóa quê hương. Bạn cần mình tư vấn món ngon hay địa điểm thú vị nào không?</p>
+                    <p>Chào bạn! Mình là <strong>Loy</strong> .Mình rất thích tìm hiểu về ẩm thực và văn hóa quê hương. Bạn cần mình tư vấn món ngon hay địa điểm thú vị nào không?</p>
                 </div>
             </div>
         </div>
@@ -991,9 +991,8 @@ ${contextData}
 Yêu cầu phong cách:
 - Xưng hô: Mình - Bạn (thân thiện, hòa nhã, chuẩn mực của học sinh).
 - Thái độ: Nhiệt tình, lễ phép nhưng trẻ trung, năng động.
-- Kiến thức: Tập trung vào ẩm thực nhưng có thể mở rộng đôi chút về văn hóa nếu liên quan.
+- Kiến thức: Tập trung vào ẩm thực nếu được hỏi về chủ đề này và cũng có thể mở rộng về văn hóa nếu liên quan. Ngoài ra cũng có thể tán ngẫu với người dùng nếu họ không hỏi về chủ đề ẩm thực hay văn hóa, về An Giang.
 - Trả lời ngắn gọn, súc tích, không dài dòng văn tự.
-- Đặc biệt: nếu được hỏi về lai lịch thì đầu tiên hãy hỏi lại người hỏi thật sự có muốn biết không.
 
 Khách hỏi: "${userMsg}"
             `;
