--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         "AIzaSy" + "BG-VpzIEZ" + "dY_9L-aTAi2S6jLLRhoRfzbk",
         "AIzaSy" + "ClbEJ9z45" + "jBw4RwA0k8Z-uDtSWpNBByxc",
         "AIzaSy" + "CufjIA8oY" + "vSR5ugxt9iHMSl_nwIZIYqzs",
+        "AIzaSy" + "AB4PPgPx54wuK" + "-jEV_NdPf88zuKqrRdp0",
         "AIzaSy" + "CeUtH22q4" + "N-ntma7m-kAW1Ctie5ViOzgw"
     ];
     let currentKeyIndex = 0;
