--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         "AIzaSy" + "ClbEJ9z45" + "jBw4RwA0k8Z-uDtSWpNBByxc",
         "AIzaSy" + "CufjIA8oY" + "vSR5ugxt9iHMSl_nwIZIYqzs",
         "AIzaSy" + "AB4PPgPx54wuK" + "-jEV_NdPf88zuKqrRdp0",
+        "AIzaSy" + "CLyfXSxrNXe" + "V7P2K_jRE" + "sEWLI5SXxnpE8",
         "AIzaSy" + "CeUtH22q4" + "N-ntma7m-kAW1Ctie5ViOzgw"
     ];
     let currentKeyIndex = 0;
