--- a/index.html
+++ b/index.html
@@ -1054,13 +1054,14 @@
 
 <div id="start-screen">
     <div class="start-logo"><span class="white">DỰ ÁN</span> MÙA HÈ XANH</div>
-    <p class="start-tagline">"Quản lý dự án không chỉ là những con số,<br>mà là nghệ thuật cân bằng giữa Trái Tim và Lý Trí."</p>
+    <p class="start-tagline">"Quản lý dự án không chỉ là những con số,<br>mà là nghệ thuật cân bằng giữa Trái Tim và Lý Trí.
+        Loy không nói thế!"</p>
     <div class="start-brief">
         <div class="brief-chip"><span class="chip-icon">💰</span> Ngân sách: 6.000.000đ</div>
         <div class="brief-chip"><span class="chip-icon">⏱️</span> Thời hạn: 25 ngày</div>
         <div class="brief-chip"><span class="chip-icon">🎯</span> 10 Giai đoạn</div>
     </div>
-    <button class="start-btn" id="start-btn">Bắt Đầu Trải Nghiệm</button>
+    <button class="start-btn" id="start-btn">Bắt Đầu</button>
 </div>
 
 <div id="difficulty-screen">
@@ -1070,7 +1071,7 @@
 
         <div class="diff-card normal" id="diff-normal">
             <span class="diff-card-icon">🌱</span>
-            <div class="diff-card-name">Bình Thường</div>
+            <div class="diff-card-name">Mẫu Giáo</div>
             <p class="diff-card-desc">Học cách quản lý. Cho phép sai lầm và thử nghiệm.</p>
             <div class="diff-stats">
                 <div class="diff-stat-row"><span class="ds-label">💰 Ngân sách</span><span class="ds-val">6.000.000đ</span></div>
