--- a/index.html
+++ b/index.html
@@ -1054,8 +1054,8 @@
 
 <div id="start-screen">
     <div class="start-logo"><span class="white">DỰ ÁN</span> MÙA HÈ XANH</div>
-    <p class="start-tagline">"Quản lý dự án không chỉ là những con số,<br>mà là nghệ thuật cân bằng giữa Trái Tim và Lý Trí.
-        Loy không nói thế!"</p>
+    <p class="start-tagline">"Quản lý dự án không chỉ là những con số,<br>mà là nghệ thuật cân bằng giữa Trái Tim và Lý Trí."</p>
+    <p class="start-tagline">"-Loy-"<p>
     <div class="start-brief">
         <div class="brief-chip"><span class="chip-icon">💰</span> Ngân sách: 6.000.000đ</div>
         <div class="brief-chip"><span class="chip-icon">⏱️</span> Thời hạn: 25 ngày</div>
