--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,98 @@
             .diff-card { min-width: 100%; max-width: 100%; padding: 18px 16px; }
             .diff-title { margin-bottom: 20px; }
         }
+        /* =============================================
+           THEME: VOLUNTEER (Xanh biển & Trắng)
+        ============================================= */
+        body.theme-volunteer {
+            --gold:       #1565C0;
+            --gold-light: #42A5F5;
+            --gold-dim:   rgba(21,101,192,0.25);
+            --gold-glow:  rgba(21,101,192,0.12);
+            --bg-deep:    #EFF6FF;
+            --bg-card:    rgba(255,255,255,0.95);
+            --bg-surface: rgba(21,101,192,0.05);
+            --bg-hover:   rgba(21,101,192,0.09);
+            --text-main:  #1E3A5F;
+            --text-sub:   #4A7FA5;
+            --text-dim:   #7EB3D4;
+            --border:     rgba(21,101,192,0.15);
+            --shadow-card: 0 24px 60px rgba(21,101,192,0.12);
+        }
+        body.theme-volunteer {
+            background: #EFF6FF;
+            background-image:
+                radial-gradient(ellipse 80% 60% at 20% 10%, rgba(144,202,249,0.45) 0%, transparent 60%),
+                radial-gradient(ellipse 60% 80% at 80% 90%, rgba(21,101,192,0.12) 0%, transparent 60%);
+        }
+        body.theme-volunteer #start-screen,
+        body.theme-volunteer #difficulty-screen,
+        body.theme-volunteer #end-screen {
+            background: #EFF6FF;
+            background-image:
+                radial-gradient(ellipse 80% 60% at 20% 10%, rgba(144,202,249,0.5) 0%, transparent 60%),
+                radial-gradient(ellipse 60% 80% at 80% 90%, rgba(21,101,192,0.15) 0%, transparent 60%);
+        }
+        body.theme-volunteer #money-fill  { background: linear-gradient(90deg, #1565C0, #0288D1); }
+        body.theme-volunteer #time-fill   { background: linear-gradient(90deg, #0288D1, #0097A7); }
+        body.theme-volunteer #morale-fill { background: linear-gradient(90deg, #E53935, #AD1457); }
+        body.theme-volunteer .choice-badge { background: rgba(21,101,192,0.08); border-right-color: rgba(21,101,192,0.2); }
+        body.theme-volunteer #story-text::before { background: linear-gradient(180deg, #1565C0, transparent); }
+        body.theme-volunteer .spinner { border-color: rgba(21,101,192,0.15); border-top-color: #1565C0; }
+        body.theme-volunteer .pill-money-neg { background: rgba(229,57,53,0.1);  color: #C62828; border-color: rgba(229,57,53,0.25); }
+        body.theme-volunteer .pill-money-pos { background: rgba(46,125,50,0.1);  color: #2E7D32; border-color: rgba(46,125,50,0.25); }
+        body.theme-volunteer .pill-time      { background: rgba(2,136,209,0.12); color: #01579B; border-color: rgba(2,136,209,0.3); }
+        body.theme-volunteer .pill-free      { background: rgba(21,101,192,0.06); color: #4A7FA5; border-color: rgba(21,101,192,0.15); }
+        body.theme-volunteer .s-dot          { background: rgba(21,101,192,0.15); border-color: rgba(21,101,192,0.2); }
+        body.theme-volunteer .s-dot.done     { background: #1565C0; border-color: #1565C0; box-shadow: 0 0 6px rgba(21,101,192,0.4); }
+        body.theme-volunteer .s-dot.active   { background: #42A5F5; border-color: #42A5F5; box-shadow: 0 0 10px rgba(66,165,245,0.6); }
+        body.theme-volunteer .admin-box      { background: rgba(255,255,255,0.97); }
+        body.theme-volunteer .admin-group input,
+        body.theme-volunteer .admin-group select { background: rgba(21,101,192,0.06); color: #1E3A5F; border-color: rgba(21,101,192,0.2); }
+
+        /* Nút chuyển theme */
+        #theme-toggle {
+            position: absolute;
+            top: 0; right: 0;
+            background: var(--bg-surface);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-sm);
+            padding: 6px 10px;
+            font-size: 0.75rem;
+            font-weight: 600;
+            color: var(--text-sub);
+            cursor: pointer;
+            transition: var(--transition);
+            -webkit-tap-highlight-color: transparent;
+            display: flex; align-items: center; gap: 5px;
+            white-space: nowrap;
+        }
+        #theme-toggle:hover { border-color: var(--gold-dim); color: var(--gold); background: var(--bg-hover); }
+
+        /* =============================================
+           PRESENTATION MODE — hover zoom (thuần CSS)
+           Chỉ áp dụng thiết bị có chuột thật.
+           Không JS, không ảnh hưởng onclick/logic AI.
+        ============================================= */
+        @media (hover: hover) and (pointer: fine) {
+            /* story-text: scale 5%, nổi lên z-index 10 */
+            #story-text {
+                transition: transform 0.28s cubic-bezier(0.4,0,0.2,1),
+                            box-shadow 0.28s cubic-bezier(0.4,0,0.2,1);
+                will-change: transform;
+            }
+            #story-text:hover {
+                transform: scale(1.05);
+                transform-origin: top center;
+                z-index: 10;
+                box-shadow: 0 20px 56px rgba(0,0,0,0.5);
+            }
+            /* choice-btn: kết hợp translateY(-2px) sẵn có + scale(1.03) */
+            .choice-btn:hover {
+                transform: translateY(-2px) scale(1.03);
+                z-index: 5;
+            }
+        }
     </style>
 </head>
 <body>
@@ -1055,13 +1147,12 @@
 <div id="start-screen">
     <div class="start-logo"><span class="white">DỰ ÁN</span> MÙA HÈ XANH</div>
     <p class="start-tagline">"Quản lý dự án không chỉ là những con số,<br>mà là nghệ thuật cân bằng giữa Trái Tim và Lý Trí."</p>
-    <p class="start-tagline">-Loy-<p>
     <div class="start-brief">
         <div class="brief-chip"><span class="chip-icon">💰</span> Ngân sách: 6.000.000đ</div>
         <div class="brief-chip"><span class="chip-icon">⏱️</span> Thời hạn: 25 ngày</div>
         <div class="brief-chip"><span class="chip-icon">🎯</span> 10 Giai đoạn</div>
     </div>
-    <button class="start-btn" id="start-btn">Bắt Đầu</button>
+    <button class="start-btn" id="start-btn">Bắt Đầu Trải Nghiệm</button>
 </div>
 
 <div id="difficulty-screen">
@@ -1071,7 +1162,7 @@
 
         <div class="diff-card normal" id="diff-normal">
             <span class="diff-card-icon">🌱</span>
-            <div class="diff-card-name">Mẫu Giáo</div>
+            <div class="diff-card-name">Bình Thường</div>
             <p class="diff-card-desc">Học cách quản lý. Cho phép sai lầm và thử nghiệm.</p>
             <div class="diff-stats">
                 <div class="diff-stat-row"><span class="ds-label">💰 Ngân sách</span><span class="ds-val">6.000.000đ</span></div>
@@ -1111,10 +1202,11 @@
 
 <div id="game-container">
 
-    <div class="game-header">
+    <div class="game-header" style="position:relative;">
         <div class="game-title" id="admin-trigger">
             <span class="white">DỰ ÁN:</span> MÙA HÈ XANH
         </div>
+        <button id="theme-toggle">🎨 Tình Nguyện</button>
         <div id="stage-dots">
             <div class="s-dot" id="dot-1"></div>
             <div class="s-dot" id="dot-2"></div>
@@ -1395,6 +1487,14 @@
 
     document.getElementById('replay-btn').addEventListener('click', () => location.reload());
 
+    // Theme toggle: Dark (mặc định) ↔ Volunteer (xanh biển/trắng)
+    let isVolunteerTheme = false;
+    document.getElementById('theme-toggle').addEventListener('click', () => {
+        isVolunteerTheme = !isVolunteerTheme;
+        document.body.classList.toggle('theme-volunteer', isVolunteerTheme);
+        document.getElementById('theme-toggle').textContent = isVolunteerTheme ? '🌙 Tối' : '🎨 Tình Nguyện';
+    });
+
     document.getElementById('admin-trigger').addEventListener('click', () => {
         adminClickCount++;
         clearTimeout(adminClickTimer);
@@ -1664,6 +1764,9 @@
         state.quality+= choice.effect.quality|| 0;
         updateUI();
 
+        // Rescale money preloaded stage cho khớp state.money vừa cập nhật
+        if (dynamicStory[nextStageId]) rescalePreloadedMoney(nextStageId);
+
         const failScene = checkGameOver();
         if (failScene) { renderScene(failScene); return; }
         if (nextStageId === "calc_ending" || nextStageId.includes("gameover") || nextStageId.includes("end_")) { renderScene(nextStageId); return; }
@@ -1730,6 +1833,23 @@
         }
 
         return pills.join('');
+    }
+
+    // Rescale money effects của preloaded stage cho phù hợp state.money hiện tại.
+    // Gọi SAU khi state.money đã được cập nhật bởi lựa chọn của người chơi.
+    // Giữ nguyên thứ bậc A > C > B vì scale tỉ lệ đều. Chỉ động tới money âm.
+    function rescalePreloadedMoney(stageId) {
+        const scene = dynamicStory[stageId];
+        if (!scene || !scene.choices) return;
+        const maxCost = Math.min(...scene.choices.map(c => c.effect.money || 0));
+        if (maxCost >= 0) return;                        // không choice nào tốn tiền
+        const budget = state.money * 0.75;               // tối đa 75% tiền hiện có
+        if (Math.abs(maxCost) <= budget) return;         // vẫn trong ngưỡng, bỏ qua
+        const ratio = budget / Math.abs(maxCost);
+        scene.choices.forEach(c => {
+            if ((c.effect.money || 0) < 0)
+                c.effect.money = Math.round(c.effect.money * ratio);
+        });
     }
 
     // Scale effect âm theo penaltyMult của độ khó hiện tại (chỉ cho bad events)
