--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
 
         <div class="diff-card normal" id="diff-normal">
             <span class="diff-card-icon">🌱</span>
-            <div class="diff-card-name">Bình Thường</div>
+            <div class="diff-card-name">Mẫu Giáo</div>
             <p class="diff-card-desc">Học cách quản lý. Cho phép sai lầm và thử nghiệm.</p>
             <div class="diff-stats">
                 <div class="diff-stat-row"><span class="ds-label">💰 Ngân sách</span><span class="ds-val">6.000.000đ</span></div>
